--- a/gfs/src/app/navbar/navbar.component.html
+++ b/gfs/src/app/navbar/navbar.component.html
@@ -1,8 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand">
+      
+      <img src="assets/images/marconi.png">
+    </a>
+    
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item px-3">
@@ -17,18 +22,20 @@
         <li class="nav-item px-3">
           <a class="nav-link">Link4</a>
         </li>
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item">Action</a></li>
-            <li><a class="dropdown-item">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item">Something else here</a></li>
-          </ul>
-        </li> -->
+        
       </ul>
     </div>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item px-3">
+          <a class="nav-link" routerLink="/main/logs">Logs</a>
+        </li>
+        <li class="nav-item px-3">
+          <button><a class="nav-link" (click)="logout()">Logout</a></button>
+        </li>
+      </ul>
+    </div>
+    
   </div>
 </nav>
